--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -22,6 +22,7 @@ r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=0
 r.AntiAliasingMethod=2
 r.DistanceFields.DefaultVoxelDensity=0.200000
+r.VirtualTextures=True
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
