--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 GameDefaultMap=/Game/Maps/SlashOpenWorld.SlashOpenWorld
 
 
-EditorStartupMap=/Game/Maps/SlashOpenWorld.SlashOpenWorld
+EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default.Minimal_Default
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
