Making Enemies Move

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -46,3 +46,8 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+CellSize=10.000000
+CellHeight=20.000000
+
